--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
 
-    <item
-        android:id="@+id/action_link"
+    <item android:id="@+id/action_down"
+        android:title="下载"
+        android:color="@color/blue"
+        android:orderInCategory="80"
+        app:showAsAction="ifRoom" />
+
+
+    <item android:id="@+id/action_settings"
+        android:title=" "
         android:orderInCategory="100"
-        android:title="@string/spec_link"
-        app:showAsAction="never" />
-
+        app:showAsAction="never"/>
 </menu>
