--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -74,9 +74,13 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_above="@+id/rl_tab">
+        android:paddingBottom="70dp"
+        android:layout_marginBottom="70dp"
     </android.support.v4.app.FragmentTabHost>
 
     <FrameLayout
+        android:paddingBottom="70dp"
+        android:layout_marginBottom="70dp"
         android:id="@+id/tabcontent"
         style="@style/Tab_FrameLayout" >
     </FrameLayout>
