--- a/app/src/main/res/layout/activity_cart_ins.xml
+++ b/app/src/main/res/layout/activity_cart_ins.xml
@@ -85,6 +85,12 @@
                      android:text="@string/txt_positive_order" />
              </RelativeLayout>
 
+             <android.support.v7.widget.RecyclerView
+                 android:id="@+id/recycle"
+                 android:layout_margin="10dp"
+                 android:layout_width="fill_parent"
+                 android:layout_height="wrap_content"/>
+
              <RelativeLayout
                  android:layout_margin="@dimen/activity_horizontal_padding"
                  android:layout_width="fill_parent"
@@ -116,6 +122,8 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <View
+        android:layout_below="@+id/toolbar"
+        android:visibility="visible"
         android:id="@+id/loading_view"
         android:background="@color/white"
         android:layout_width="fill_parent"
