--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@ android:layout_height="fill_parent">
     </FrameLayout>
 
     <View
-        android:visibility="invisible"
+        android:visibility="gone"
         android:id="@+id/overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,82 +17,4 @@ android:layout_height="fill_parent">
         android:background="@color/black_alpha_30"
         android:clickable="true"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        style="@style/FabMargin"
-        android:layout_marginBottom="70dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/ic_add_black_24dp"
-        app:backgroundTint="@color/blue_accent200"
-        app:borderWidth="0dp" />
-
-    <io.codetail.widget.RevealFrameLayout
-        android:layout_marginBottom="70dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true">
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/sheet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing"
-            android:visibility="invisible"
-            app:cardElevation="2dp">
-
-            <LinearLayout
-                android:layout_width="240dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <include
-                    android:id="@+id/row_1"
-                    layout="@layout/part_sheet_list" />
-
-                <include
-                    android:id="@+id/row_2"
-                    layout="@layout/part_sheet_list" />
-
-                <include
-                    android:id="@+id/row_3"
-                    layout="@layout/part_sheet_list" />
-
-                <include
-                    android:id="@+id/row_4"
-                    layout="@layout/part_sheet_list" />
-
-                <RelativeLayout
-                    android:id="@+id/row_5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/accent200"
-                    android:paddingBottom="@dimen/spacing_small"
-                    android:paddingLeft="@dimen/spacing"
-                    android:paddingRight="@dimen/spacing"
-                    android:paddingTop="@dimen/spacing_small">
-
-                    <ImageView
-                        android:id="@+id/img_icon"
-                        android:layout_width="@dimen/img_thumb"
-                        android:layout_height="@dimen/img_thumb"
-                        android:scaleType="center"
-                        android:src="@drawable/ic_edit_grey_900_24dp" />
-
-                    <TextView
-                        android:id="@+id/txt_title"
-                        style="@style/TextContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="@dimen/spacing"
-                        android:layout_toRightOf="@id/img_icon"
-                        android:text="Compose New" />
-                </RelativeLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-    </io.codetail.widget.RevealFrameLayout>
 </RelativeLayout>
