--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -14,6 +14,7 @@
 
 
    <com.jorge.appcartoon.widget.BaseListView
+       android:fastScrollEnabled="false"
        android:layout_marginTop="@dimen/chanel_item_margin"
        android:background="@color/white"
        android:id="@+id/baseListView"
