--- a/app/src/main/res/layout/activity_cart_ins.xml
+++ b/app/src/main/res/layout/activity_cart_ins.xml
@@ -46,17 +46,21 @@
                  android:layout_height="wrap_content">
                  <TextView
                      style="@style/base_weight_horizontal_style"
+                     android:textColor="@color/black"
                      android:text="@string/txt_book_mark"
                      android:drawableLeft="@mipmap/icon_ins_book_mark" />
                  <TextView
+                     android:textColor="@color/black"
                      style="@style/base_weight_horizontal_style"
                      android:text="@string/txt_book_list"
                      android:drawableLeft="@mipmap/icon_ins_book_mark" />
                  <TextView
+                     android:textColor="@color/black"
                      style="@style/base_weight_horizontal_style"
                      android:text="@string/txt_relative_subject"
                      android:drawableLeft="@mipmap/icon_ins_book_mark" />
                  <TextView
+                     android:textColor="@color/black"
                      style="@style/base_weight_horizontal_style"
                      android:text="@string/txt_share"
                      android:drawableLeft="@mipmap/icon_ins_book_mark" />
@@ -108,6 +112,7 @@
                      android:layout_alignParentRight="true"
                      android:text="@string/txt_new_discuss" />
              </RelativeLayout>
+             <include layout="@layout/layout_divider_gray"/>
              <include layout="@layout/item_comment_list"/>
              <include layout="@layout/layout_divider_gray"/>
              <TextView
