--- a/app/src/main/res/layout/activity_enjoy.xml
+++ b/app/src/main/res/layout/activity_enjoy.xml
@@ -3,12 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context="com.jorge.appcartoon.ui.activity.EnjoyActivity">
 
     <android.support.v4.view.ViewPager
+        android:background="@color/black"
         android:id="@+id/viewpager"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_width="fill_parent">
-
     </android.support.v4.view.ViewPager>
 
-    <include layout="@layout/layout_toolbar"/>
+
+    <include layout="@layout/layout_toolbar" android:id="@+id/layout_toolbar" android:visibility="gone"/>
+    <View
+        android:layout_below="@+id/layout_toolbar"
+        android:id="@+id/loading_view"
+        android:background="@color/white"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
+    <ProgressBar
+        android:id="@+id/progressbar"
+        style="@android:style/Widget.ProgressBar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        android:indeterminate="false"
+        android:indeterminateDrawable="@drawable/loading"
+        android:padding="5dp" />
+
+    <include layout="@layout/layout_enjoy_bottom" android:id="@+id/layout_toolbar"  android:layout_alignParentBottom="true"     android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
 
 </RelativeLayout>
