--- a/app/src/main/res/layout/item_comment_list.xml
+++ b/app/src/main/res/layout/item_comment_list.xml
@@ -1,51 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_margin="@dimen/activity_horizontal_padding"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent" android:layout_height="wrap_content">
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/profile_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:civ_border_width="1dp"
-        app:civ_border_color="#999999"/>
     <RelativeLayout
-        android:layout_marginLeft="@dimen/activity_horizontal_padding"
-        android:layout_height="120dp"
-        android:id="@+id/ll_content"
-        android:layout_toRightOf="@+id/profile_image"
-        android:layout_width="wrap_content">
-        <TextView
-            android:textColor="@color/second_progress_color"
-            android:text="Android Monitor"
-            android:id="@+id/tv_nick"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        android:id="@+id/rl_parent_1"
+        android:layout_margin="@dimen/activity_horizontal_padding"
+        android:layout_width="match_parent" android:layout_height="wrap_content">
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/profile_image_1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#999999"/>
+        <RelativeLayout
+            android:layout_marginLeft="@dimen/activity_horizontal_padding"
+            android:layout_height="120dp"
+            android:id="@+id/ll_content_1"
+            android:layout_toRightOf="@+id/profile_image_1"
+            android:layout_width="wrap_content">
+            <TextView
+                android:textColor="@color/colorAccent"
+                android:text="Android Monitor"
+                android:id="@+id/tv_nick_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_below="@+id/tv_nick"
-            android:text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
-            android:id="@+id/tv_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_alignParentBottom="true"
-            android:text="09.18 08:45"
-            android:id="@+id/tv_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:textColor="@color/black"
+                android:layout_below="@+id/tv_nick_1"
+                android:text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
+                android:id="@+id/tv_content_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textColor="@color/black"
+                android:layout_alignParentBottom="true"
+                android:text="09.18 08:45"
+                android:id="@+id/tv_time_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:drawableLeft="@mipmap/icon_ins_discuss_watch"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:text="@string/txt_whole"
-            android:id="@+id/tv_whole"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:textColor="@color/black"
+                android:drawableLeft="@mipmap/icon_ins_discuss_watch"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:text="@string/txt_whole"
+                android:id="@+id/tv_whole_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
-</RelativeLayout>
+
+
+    <RelativeLayout
+
+        android:id="@+id/rl_parent_2"
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/activity_horizontal_padding"
+        android:layout_width="match_parent" android:layout_height="wrap_content">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/profile_image_2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="@dimen/activity_horizontal_padding"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#999999"/>
+        <RelativeLayout
+            android:layout_marginTop="@dimen/activity_horizontal_padding"
+            android:layout_marginLeft="@dimen/activity_horizontal_padding"
+            android:layout_height="120dp"
+            android:id="@+id/ll_content_2"
+            android:layout_toRightOf="@+id/profile_image_2"
+            android:layout_width="wrap_content">
+            <TextView
+                android:textColor="@color/colorAccent"
+                android:text="Android Monitor"
+                android:id="@+id/tv_nick_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:textColor="@color/black"
+                android:layout_below="@+id/tv_nick_2"
+                android:text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
+                android:id="@+id/tv_content_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textColor="@color/black"
+                android:layout_alignParentBottom="true"
+                android:text="09.18 08:45"
+                android:id="@+id/tv_time_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:textColor="@color/black"
+                android:drawableLeft="@mipmap/icon_ins_discuss_watch"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:text="@string/txt_whole"
+                android:id="@+id/tv_whole_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+        <include  android:layout_alignParentBottom="true" layout="@layout/layout_divider_gray"   />
+    </RelativeLayout>
+
+</LinearLayout>
+
+
+
