--- a/app/src/main/res/layout/layout_cart_ins_brief_ins.xml
+++ b/app/src/main/res/layout/layout_cart_ins_brief_ins.xml
@@ -12,6 +12,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:textColor="@color/black"
                 android:clickable="true"
                 android:gravity="center"
                 android:text="@string/txt_work_ins"
@@ -19,6 +20,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
             <TextView
+                android:textColor="@color/black"
                 android:clickable="true"
                 android:gravity="center"
                 android:text="@string/txt_author_ins"
@@ -26,6 +28,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
             <TextView
+                android:textColor="@color/black"
                 android:clickable="true"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
@@ -37,12 +40,14 @@
         <include android:id="@+id/divider" layout="@layout/layout_divider_gray"/>
 
         <TextView
+            android:textColor="@color/black"
             android:id="@+id/tv_brief_des"
             android:layout_margin="@dimen/chanel_item_margin"
             android:text="！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
         <TextView
+
             android:id="@+id/tv_des_toggle"
             android:layout_marginBottom="@dimen/chanel_item_margin"
             android:background="@mipmap/icon_open_btn"
