--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <integer  name="borderWidth">30</integer >
     <integer  name="chapter_items">4</integer >
     <integer  name="default_chapters_show">12</integer >
+    <integer  name="default_txt_count">6</integer >
 
     <dimen name="txt_size_classify_high">18sp</dimen>
     <dimen name="txt_size_classify_mid">15sp</dimen>
