--- a/app/src/main/res/layout/layout_cart_ins_top.xml
+++ b/app/src/main/res/layout/layout_cart_ins_top.xml
@@ -69,6 +69,7 @@
                 android:textColor="@color/white" />
 
             <Button
+                android:id="@+id/btn_continue"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/button_height"
                 android:layout_marginLeft="@dimen/button_margin"
